--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ compiler:
   - gcc
 
 before_install:
-  sudo add-apt-repository ppa:snaipewastaken/ppa
-  sudo apt-get update
-  sudo apt-get install criterion-dev
+  sudo add-apt-repository ppa:snaipewastaken/ppa && sudo apt-get update && sudo apt-get install criterion-dev
 
 script:
   - make
